--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
       @include('partials/hero.html')
       @include('partials/mentorship.html')
       @include('partials/training.html')
+      @include('partials/program.html')
     </main>
     @include('partials/footer.html')
   </div>
