--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       @include('partials/mentorship.html')
       @include('partials/training.html')
       @include('partials/program.html')
+      @include('partials/tariffs.html')
     </main>
     @include('partials/footer.html')
   </div>
