--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       @include('partials/training.html')
       @include('partials/program.html')
       @include('partials/tariffs.html')
+      @include('partials/speaker.html')
     </main>
     @include('partials/footer.html')
   </div>
