--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       @include('partials/program.html')
       @include('partials/tariffs.html')
       @include('partials/speaker.html')
+      @include('partials/answers.html')
     </main>
     @include('partials/footer.html')
   </div>
